--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --config config/jest/jest.config.js",
-    "start": "webpack-dev-server --config config/webpack/webpack.dev.js",
+    "start": "webpack-dev-server --config config/webpack/webpack.dev.js --host 0.0.0.0",
     "build": "webpack --config config/webpack/webpack.prod.js",
     "serve": "yarn rimraf dist && yarn build && node config/server/index.js",
     "eslint": "eslint ./src/**/*.js"
