--- a/package.json
+++ b/package.json
@@ -19,35 +19,40 @@
     "eslint": "^5.0.0",
     "eslint-plugin-flowtype": "^2.49.3",
     "eslint-plugin-prettier": "^2.6.1",
-    "eslint-plugin-react": "^7.9.1",
+    "eslint-plugin-react": "7.11.1",
     "express": "^4.16.3",
     "ramda": "^0.25.0",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "rebass": "^2.0.0-10",
+    "react": "16.4.0",
+    "react-dom": "16.4.0",
+    "rebass": "2.3.4",
     "styled-components": "^3.3.3"
   },
   "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.5",
-    "babel-jest": "^23.0.1",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-jsx-control-statements": "^3.2.8",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-flow": "^6.23.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "enzyme": "^3.3.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/plugin-proposal-function-sent": "^7.0.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^9.0.0",
+    "babel-jest": "23.6.0",
+    "babel-loader": "^8.0.0",
+    "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.4",
     "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-jsx-control-statements": "^2.2.1",
     "flow-bin": "^0.75.0",
     "flow-typed": "^2.4.0",
     "html-webpack-plugin": "^4.0.0-alpha",
-    "jest": "^23.1.0",
+    "jest": "23.6.0",
     "loader": "^2.1.1",
     "rimraf": "^2.6.2",
     "uglifyjs-webpack-plugin": "^1.2.6",
