--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react": "16.4.0",
     "react-dom": "16.4.0",
     "rebass": "2.3.4",
-    "styled-components": "^3.3.3"
+    "styled-components": "4.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
