chore: update flow version

--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.4",
     "eslint-config-prettier": "^2.9.0",
-    "flow-bin": "^0.75.0",
-    "flow-typed": "^2.4.0",
+    "flow-bin": "0.86.0",
+    "flow-typed": "2.4.0",
     "html-webpack-plugin": "^4.0.0-alpha",
     "jest": "23.6.0",
     "loader": "^2.1.1",
