chore: update react version to 16.6

--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "eslint-plugin-react": "7.11.1",
     "express": "^4.16.3",
     "ramda": "^0.25.0",
-    "react": "16.4.0",
-    "react-dom": "16.4.0",
+    "react": "16.6.1",
+    "react-dom": "16.6.1",
     "rebass": "2.3.4",
     "styled-components": "4.0.3"
   },
@@ -46,7 +46,7 @@
     "babel-jest": "23.6.0",
     "babel-loader": "^8.0.0",
     "enzyme": "3.7.0",
-    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-adapter-react-16": "1.7.0",
     "enzyme-to-json": "^3.3.4",
     "eslint-config-prettier": "^2.9.0",
     "flow-bin": "0.86.0",
