--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "flow-bin": "0.86.0",
     "flow-typed": "2.4.0",
     "html-webpack-plugin": "^4.0.0-alpha",
-    "jest": "23.6.0",
+    "jest": "^24.8.0",
     "loader": "^2.1.1",
     "prettier": "^1.15.1",
     "rimraf": "^2.6.2",
