--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "eslint-plugin-prettier": "^2.6.1",
     "eslint-plugin-react": "7.11.1",
     "express": "^4.16.3",
-    "ramda": "^0.25.0",
+    "ramda": "^0.26.1",
     "react": "16.6.1",
     "react-dom": "16.6.1",
     "rebass": "2.3.4",
@@ -49,7 +49,7 @@
     "enzyme-adapter-react-16": "1.7.0",
     "enzyme-to-json": "^3.3.4",
     "eslint-config-prettier": "^2.9.0",
-    "flow-bin": "0.86.0",
+    "flow-bin": "0.102.0-rc",
     "flow-typed": "^2.5.2",
     "html-webpack-plugin": "^4.0.0-alpha",
     "jest": "^24.8.0",
