--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "eslint-plugin-react": "7.11.1",
     "express": "^4.16.3",
     "ramda": "^0.26.1",
-    "react": "16.6.1",
-    "react-dom": "16.6.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "rebass": "2.3.4",
     "styled-components": "4.0.3"
   },
