--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,11 @@
 {
   "presets": [
-    "@babel/preset-env",
     "@babel/preset-flow",
-    "@babel/preset-react"
+    "@babel/preset-react",
+    [
+      "@babel/preset-env",
+      { "useBuiltIns": "entry", "targets": { "node": "current", "ie": 11 } }
+    ]
   ],
   "plugins": [
     "@babel/plugin-syntax-dynamic-import",
