--- a/package.json
+++ b/package.json
@@ -41,9 +41,10 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@testing-library/react": "^8.0.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^9.0.0",
-    "babel-jest": "23.6.0",
+    "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.0",
     "enzyme": "3.7.0",
     "enzyme-adapter-react-16": "1.7.0",
@@ -53,8 +54,10 @@
     "flow-typed": "^2.5.2",
     "html-webpack-plugin": "^4.0.0-alpha",
     "jest": "^24.8.0",
+    "jest-dom": "^3.5.0",
     "loader": "^2.1.1",
     "prettier": "^1.15.1",
+    "regenerator-runtime": "^0.13.2",
     "rimraf": "^2.6.2",
     "uglifyjs-webpack-plugin": "^1.2.6",
     "webpack": "^4.12.0",
