--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "webpack-dev-server --config config/webpack/webpack.dev.js --host 0.0.0.0",
     "build": "webpack --config config/webpack/webpack.prod.js",
     "serve": "yarn rimraf dist && yarn build && node config/server/index.js",
-    "eslint": "eslint ./src/**/*.js"
+    "eslint": "eslint \"src/**/*.js\""
   },
   "repository": "",
   "author": "Bruno Gama",
